securitygroup.tf
resource "aws_security_group" "allow-ssh" {
  vpc_id      = aws_vpc.tag-demo.id
  name        = "allow-ssh"
  description = "security group that allows ssh and all egress traffic"
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  tags = {
    Name = "allow-ssh"
  }
}

  resource "aws_security_group" "allow-aurora-mysql" {
  vpc_id      = aws_vpc.tag-demo.id
  name        = "allow-aurora-mysql"
  description = "security group that allows Aurora MySQL ingress and all egress"
  ingress {
    from_port       = 3306
    to_port         = 3306
    protocol        = "tcp"
    security_groups = [aws_security_group.allow-ssh.id]
  }
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
    self        = true
  }
  tags = {
    Name = "allow-aurora-mysql"
  }
}
